RESOLVED FIXED270496
AX: AXPropertyName::{ColumnIndexRange, RowIndexRange} properties are never updated
https://bugs.webkit.org/show_bug.cgi?id=270496
Summary AX: AXPropertyName::{ColumnIndexRange, RowIndexRange} properties are never up...
Tyler Wilcock
Reported 2024-03-04 18:32:21 PST
This can cause ATs to miss table content if they use the rowIndexRange and columnIndexRange APIs as inputs to the cellForColumnAndRow API.
Attachments
Patch (23.81 KB, patch)
2024-03-04 18:40 PST, Tyler Wilcock
no flags
Patch (23.82 KB, patch)
2024-03-04 19:18 PST, Tyler Wilcock
no flags
Patch (23.74 KB, patch)
2024-03-04 20:01 PST, Tyler Wilcock
no flags
Patch (23.77 KB, patch)
2024-03-04 22:26 PST, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2024-03-04 18:32:35 PST
Tyler Wilcock
Comment 2 2024-03-04 18:40:30 PST
Tyler Wilcock
Comment 3 2024-03-04 19:18:46 PST
Tyler Wilcock
Comment 4 2024-03-04 20:01:24 PST
Tyler Wilcock
Comment 5 2024-03-04 22:26:00 PST
EWS
Comment 6 2024-03-05 14:21:23 PST
Committed 275710@main (6e896e7e4003): <https://commits.webkit.org/275710@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470175 [details].
Note You need to log in before you can comment on or make changes to this bug.